"Fix" bug where logout and admin button was rendered off screen
For some reason, on phones, when the width of the document increased with the menu toggle the height of the document is increased proportionally. This resulted in the menu items at the bottom of the menu being sent way off screen.

Tested on a normal Linux machine with Firefox and Chrome.

--- a/batadasen/static/style.css
+++ b/batadasen/static/style.css
@@ -21,7 +21,7 @@ For large screens, the presence of .toggled hides the sidebar.
 
 #sidebar-wrapper {
     z-index: 1000;
-    position: fixed;
+    position: absolute;
     left: 250px;
     width: 0;
     height: 100%;
